# majority-judgment-library-python

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tdd.yml
majority_judgment/: __init__.py
